--- a/netcore_mvc_pro/netcore_mvc_pro.csproj
+++ b/netcore_mvc_pro/netcore_mvc_pro.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <AssemblyName>erpcore</AssemblyName>
+    <RootNamespace>erpcore</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
